--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": ">=16.19.1"
   },
   "scripts": {
-    "dev:kun": "pnpm run --filter @shanhai/kun dev"
+    "dev:kun": "pnpm run --filter @shanhai/kun dev",
+    "build:kun": "pnpm run --filter @shanhai/kun build"
   },
   "devDependencies": {
     "typescript": "5.4.5",
@@ -27,11 +28,11 @@
     "webpack-dev-server": "4.15.1",
     "mini-css-extract-plugin": "2.9.0",
     "clean-webpack-plugin": "4.0.0",
-    "babel-loader": "9.1.3",
-    "@babel/preset-env": "7.24.6",
     "css-loader": "7.1.2",
     "less-loader": "12.2.0",
     "extra-watch-webpack-plugin": "1.0.3",
-    "chokidar": "3.6.0"
+    "chokidar": "3.6.0",
+    "css-minimizer-webpack-plugin": "7.0.0",
+    "terser-webpack-plugin": "5.3.10"
   }
 }
