chore: Use typecho.zip as the mount object to ensure version consistency

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,4 @@ yarn-error.log*
 # Ignore any other unwanted files or directories here
 
 # typecho
-test/typecho/usr/themes/*
-test/typecho/usr/*.db
-!test/typecho/usr/themes/default/
+test/typecho/*
