--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/webpack-dev-server": "4.7.2",
     "@types/node": "20.14.1",
     "webpack-dev-server": "4.15.1",
+    "copy-webpack-plugin": "11.0.0",
     "mini-css-extract-plugin": "2.9.0",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "7.1.2",
