--- a/apps/kun/tsconfig.json
+++ b/apps/kun/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "allowJs": true,
     "baseUrl": ".",
     "outDir": "dist", // 输出目录
     "paths": {
