--- a/apps/kun/package.json
+++ b/apps/kun/package.json
@@ -32,6 +32,7 @@
     "identicon.js": "2.3.3",
     "@types/identicon.js": "2.3.4",
     "object-hash": "3.0.0",
-    "@types/object-hash": "3.0.6"
+    "@types/object-hash": "3.0.6",
+    "simplebar": "6.2.6"
   }
 }
