--- a/apps/kun/package.json
+++ b/apps/kun/package.json
@@ -36,6 +36,7 @@
     "simplebar": "6.2.6",
     "medium-zoom": "1.1.0",
     "draggabilly": "3.0.0",
-    "@types/draggabilly": "2.1.6"
+    "@types/draggabilly": "2.1.6",
+    "picmo": "5.8.5"
   }
 }
