--- a/apps/kun/package.json
+++ b/apps/kun/package.json
@@ -37,6 +37,7 @@
     "medium-zoom": "1.1.0",
     "draggabilly": "3.0.0",
     "@types/draggabilly": "2.1.6",
-    "picmo": "5.8.5"
+    "picmo": "5.8.5",
+    "chinese-lunar-calendar": "1.0.1"
   }
 }
